// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:alert 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--success"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    提示内容
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:alert var 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--success"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-icon"
            >
              <icon-mock
                class="icon icon-copy"
                icon="copy"
              />
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    百度一下，你就知道
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:alert with level 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--info"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    提示类文案
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--success"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    成功类文案
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--warning"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    警告类文案
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--danger"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    危险类文案
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:alert with showCloseButton & closeButtonClassName 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--info"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    提示信息
                  </span>
                </span>
              </div>
            </div>
            <button
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-close classNameForClose"
              type="button"
            >
              <icon-mock
                class="icon icon-close"
                icon="close"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:alert with title & showIcon & icon & iconClassName 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert __PRISMUI_COMPONENT_CLASS_PREFIX__Alert--info __PRISMUI_COMPONENT_CLASS_PREFIX__Alert-has-title"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-icon starClass"
            >
              <icon-mock
                class="icon icon-star"
                icon="star"
              />
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-content"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-title"
              >
                提示类文案
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Alert-desc"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    提示类文案
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
